# openapi-interfaces

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT.txt  README.md  deny.toml  example.yml  example_output.yml
.github/workflows/: ci.yml
examples/: example.yml  example_nullable_fields.yml  example_nullable_fields_output.yml  example_output.yml  long_example.yml  long_example_output.yml  oneof_example.yml  oneof_example_output.yml  oneof_with_nonmutable_example.yml  oneof_with_nonmutable_example_output.yml
examples/include_files/: base.yml  core_components.yml  output.yml  paths.yml
src/: main.rs  parse_error.rs
src/openapi/: included_files.rs  interface.rs  long_example.yml  long_example_output.yml  mod.rs  ref_or.rs  scalar_or_vec.rs  schema.rs  serde_helpers.rs  set_or_scalar.rs  transpile.rs
