[package]
name = "openapi-interfaces"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pretty_assertions = "0.7.2"

[dependencies]
anyhow = "1.0.44"
codespan-reporting = "0.11.1"
env_logger = "0.9.0"
json-patch = "0.2.6"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
structopt = "0.3.23"
termcolor = "1.1.2"
topological-sort = "0.1.0"
