[package]
name = "openapi-interfaces"
version = "0.1.2"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Generate OpenAPI schemas for related GET, POST, PUT and JSON Merge Patch types"
categories = ["command-line-utilities", "web-programming", "ffi"]
keywords = ["openapi", "schema", "json-merge-patch"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/faradayio/openapi-interfaces"
repository = "https://github.com/faradayio/openapi-interfaces"
#documentation = ""

[dev-dependencies]
pretty_assertions = "0.7.2"

[dependencies]
anyhow = "1.0.44"
codespan-reporting = "0.11.1"
env_logger = "0.9.0"
json-patch = "0.2.6"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
structopt = "0.3.23"
termcolor = "1.1.2"
topological-sort = "0.1.0"
